# deep_rag

./: .env.example  .gitignore  README.md  project_config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: chat_memory.py  evidence_model.py  llm_client.py  logger.py  main.py  mcp_client.py  token_tracker.py  web.py
app/orchestrator/: answer_generator.py  query_analyzer.py  state_machine.py
config/: deep_rag.yaml
data/: mock_docs.db  mock_seed.sql
docs/: SKILL.md  evidence_model.md  query_types.md  sufficiency_rules.md
eval/: mock_db_qa.jsonl  run_eval.py  sample_qa.jsonl
evaluation/: baseline_rag.py  check_ragas_prereq.py  run_eval.py  test_questions.json
evaluation/results/: eval_20260310_163535.json  eval_20260310_164054.json  eval_20260316_142926.json  eval_20260316_145647.json  eval_20260316_151014.json  eval_20260316_153236.json
index_store/: navigation_index.json
index_store/discovery/: general_company_overview.md.json  general_onboarding_guide.pdf.json  li_xinqi_resume______.pdf.pdf.json  (+20 more)
logs/: query_logs.jsonl
mcp_server/: config.py  server.py
preprocessor/: index_builder.py  run_preprocess.py
scripts/: demo_sqlite_retrieval.py
tests/: test_evaluation_task1.py  test_index_builder.py  test_markdown_parser.py  test_navigation_tool.py  test_project_config_task0.py  test_query_analyzer.py  test_query_analyzer_task2.py  test_search_engine_task1.py  test_sqlite_connector.py  test_state_machine_task1.py  test_state_machine_task2.py  test_task3_phase3.py  test_verify_tool.py
tmp_index/: navigation_index.json
(+75 files in other folders)
